# auto-stash

./: Cargo.toml  LICENSE  README  README.md  bootstrap.js  content.js  js_helpers.js  manifest.json  popup.css  popup.html  popup.js  privacy.md
src/: api.rs  lib.rs  storage.rs
